--- a/task 1.1/style.css
+++ b/task 1.1/style.css
@@ -10,7 +10,7 @@ body{
     color: #000;
 }
 a{
-    text-decoration: none;
+    text-decoration: none; 
     cursor: pointer;
 }
 
@@ -22,6 +22,9 @@ button{
     border: none;
     background-color: transparent;
     cursor: pointer;
+}
+li{
+    list-style: none;
 }
 
 
@@ -37,25 +40,28 @@ aside{
     width: 140px;
 }
 .logo{
-    padding: 0 10px;
+    margin: 0 10px;
 }
 .aside-item{
     width: 100%;
-    height: 66px;
-    padding-top: 13px;
-
-}
-.item-image{
-    margin: 5px 0 0 3px;
+   display: flex;
+   align-items: center;
+    margin-bottom: 35px;
 }
 .item-link{
-    margin-left: 12px; 
     vertical-align: 13px;
     font-style: italic;
     font-weight: normal;
     font-size: 14px;
     line-height: 14px;
     color: #34ACA7;
+    display: flex;
+    align-items: center;
+
+}
+.item-link > span{
+    margin-left: 15px;
+
 }
 .aside-title{
     padding: 5px 0;
@@ -199,10 +205,10 @@ input:placeholder-shown{
 .cards{
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 .card{
     flex-basis: 207px;
-    margin-bottom: 28px;
 }
 .card:last-child{
     margin-right: 0;
@@ -233,7 +239,7 @@ input:placeholder-shown{
     letter-spacing: -0.02em;
     margin-bottom: 11px;
 }
-.card-date{
+.card-footer{
     font-size: 14px;
     line-height: 20px;
     letter-spacing: -0.02em;
@@ -246,12 +252,12 @@ footer{
     border-top: 2px solid #E5E5E5;
     max-width: 1088px;
     display: flex;
-    margin: 0 auto;
+    margin: 30px auto 0 auto;
     justify-content: space-between;
     align-items: center;
 }
 
-.footer-left>a{
+.footer-links>a{
     font-size: 12px;
     line-height: 12px;
     letter-spacing: -0.02em;
@@ -259,19 +265,19 @@ footer{
     border-right: 1px solid #E5E5E5;
     padding: 4px;
 }
-.footer-left>a:last-of-type{
+.footer-links>a:last-of-type{
     border-right: none
 }
-.footer-left>p{
+.footer-links>p{
     font-size: 12px;
     line-height: 12px;
     letter-spacing: -0.02em;
     color: #E5E5E5;
     margin-top: 5px;
 }
-.footer-right{
+.footer-icon{
  margin: 25px 0;
 }
-.footer-right>a{
+.footer-icon>a{
     margin-right: 4px;
 }
