--- a/task 1.1/style.css
+++ b/task 1.1/style.css
@@ -14,6 +14,7 @@ a{
     cursor: pointer;
 }
 
+
 a:hover{
     text-decoration: underline;
 }
@@ -168,6 +169,9 @@ main{
     flex-basis: 25%;
     background-color: #EFF8F7;;
     border-left: 1px solid #F9FBFB;
+}
+.tab>a{
+    color: #34ACA7
 }
 .tab-title{
     font-size: 18px;
