fixed cards links

--- a/task 1.1/style.css
+++ b/task 1.1/style.css
@@ -234,6 +234,9 @@ input:placeholder-shown{
 .card{
     flex-basis: 207px;
 }
+.card>a{
+    color: #34ACA7; 
+}
 .card:last-child{
     margin-right: 0;
 }
@@ -285,7 +288,6 @@ footer{
     font-size: 12px;
     line-height: 12px;
     color: #34ACA7;
-    /* border-right: 1px solid #E5E5E5; */
     padding: 4px;
     padding-right: 6px;
     background: url(./icons/bor-right.svg) no-repeat center right;
