media queries 480px-768px

--- a/task 1.1/styles/media768.css
+++ b/task 1.1/styles/media768.css
@@ -32,7 +32,10 @@
     .aside-friends{
         display: none;
     }
+    main{
+        width: 710px;
+    }
     footer{
-        width: 716px;
+        max-width: 716px;
     }
 }
