--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 480px) {
   aside {
-    padding: 0 20px;
+    padding: 0;
     width: 100%;
     flex-direction: column-reverse;
     flex-wrap: wrap;
@@ -11,11 +11,7 @@
   }
 
   main {
-    width: 100%;
-  }
-
-  input {
-    min-width: 100%;
+    max-width: 100%;
   }
 
   .cards {
@@ -48,12 +44,13 @@
 }
 @media screen and (max-width: 768px) {
   .container {
-    min-width: 561px;
+    /* min-width: 561px; */
+    max-width: 545px;
   }
 
   aside {
-    width: 561px;
-    margin: 0 auto 30px;
+    max-width: 100%;
+    margin: 0 auto 30px 0;
   }
 
   .logo {
@@ -61,12 +58,12 @@
   }
 
   .aside-item {
-    width: 100px;
+    /* width: 100px; */
   }
 
-  .aside-item:last-child {
-    width: 41px;
-  }
+  /* .aside-item:last-child{
+        width: 41px;
+    } */
 
   .item-link {
     background: none;
@@ -78,7 +75,7 @@
   }
 
   main {
-    width: 545px;
+    max-width: 545px;
     margin: 0 auto;
   }
 
@@ -126,10 +123,11 @@
 
   form {
     margin: 15px 0;
+    width: 100%;
   }
 
   input {
-    width: 394px;
+    width: 100%;
   }
 
   .card {
@@ -152,7 +150,7 @@
 }
 @media screen and (max-width: 992px) {
   .container {
-    width: 710px;
+    max-width: 710px;
     flex-direction: column;
   }
 
@@ -166,10 +164,11 @@
   .aside-menu {
     display: flex;
     justify-content: space-between;
+    flex: 1 1 auto;
   }
 
   .aside-item {
-    width: 100px;
+    /* width: 100px; */
     margin: 0;
   }
 
@@ -193,7 +192,7 @@
   }
 
   main {
-    width: 710px;
+    max-width: 710px;
   }
 
   footer {
@@ -202,11 +201,11 @@
 }
 @media screen and (max-width: 1176px) {
   .container {
-    width: 896px;
+    max-width: 896px;
   }
 
   main {
-    width: 712px;
+    max-width: 712px;
   }
 
   .banner {
@@ -250,7 +249,7 @@ body {
   font-family: "Arial", sans-serif;
   font-style: normal;
   color: #000;
-  min-width: 700px;
+  /* min-width: 700px; */
 }
 
 a {
@@ -375,7 +374,7 @@ aside {
 }
 
 main {
-  width: 896px;
+  max-width: 896px;
 }
 
 /* banner */
@@ -394,6 +393,7 @@ main {
 .banner-image {
   width: 100%;
   height: 445px;
+  object-fit: cover;
 }
 
 .banner-header {
