--- a/task 1.1/styles/media480.css
+++ b/task 1.1/styles/media480.css
@@ -1,20 +1,21 @@
 @media screen and (max-width: 768px){
     .container{
-        min-width: 561px;
-    }
+        /* min-width: 561px; */
+        max-width: 545px;
+    } 
     aside{
-        width: 561px;
-        margin: 0 auto 30px ;
+        max-width: 100%;
+        margin: 0 auto 30px 0;
     }
     .logo{
         margin: 0;
     }
     .aside-item{
-        width: 100px;
+        /* width: 100px; */ 
     }
-    .aside-item:last-child{
+    /* .aside-item:last-child{
         width: 41px;
-    }
+    } */
 
     .item-link{
         background: none;
@@ -24,7 +25,7 @@
         align-self: center;
     }
     main{
-        width: 545px;
+        max-width: 545px;
         margin: 0 auto;
     }
     .banner{
@@ -62,9 +63,10 @@
     }
     form{
         margin: 15px 0;
+        width: 100%;
     }
     input{
-        width: 394px;
+        width: 100%;
     }
     .card{
         flex-basis: 45%;
