--- a/task 1.1/styles/style.css
+++ b/task 1.1/styles/style.css
@@ -8,7 +8,7 @@ body{
     font-family: "Arial", sans-serif;
     font-style: normal;
     color: #000;
-    min-width: 700px;
+    /* min-width: 700px; */
 }
 a{
     text-decoration: none; 
@@ -114,7 +114,7 @@ aside{
     padding-bottom: 15px;
 }
 main{
-    width: 896px;
+    max-width: 896px;
 }
 /* banner */
 .banner{
@@ -129,6 +129,7 @@ main{
 .banner-image{
     width: 100%;
     height: 445px;
+    object-fit: cover;
 }
 
 .banner-header{   
