--- a/src/scss/core/_aside.scss
+++ b/src/scss/core/_aside.scss
@@ -1,15 +1,14 @@
 aside {
 	margin-right: 44px;
 	width: 140px;
-	display: flex;
-	flex-direction: column;
+	@include col;
 }
 .logo {
 	margin: 0 10px;
 }
 .aside-item {
 	width: 100%;
-	display: flex;
+	@include row;
 	align-items: center;
 	margin-bottom: 35px;
 }
@@ -20,7 +19,7 @@ aside {
 	font-size: 14px;
 	line-height: 14px;
 	color: #34ACA7;
-	display: flex;
+	@include row;
 	align-items: center;
 	height: 32px;
 	>span {
@@ -33,21 +32,7 @@ aside {
 }
 	}
 
-// .taste {
-// 	background: url(../icons/tastemakers.svg) no-repeat;
-// }
-// .blog {
-// 	background: url(../icons/blog.svg) no-repeat;
-// }
-// .list {
-// 	background: url(../icons/theAList.svg) no-repeat;
-// }
-// .contribure {
-// 	background: url(../icons/contribure.svg) no-repeat;
-// }
-// .about {
-// 	background: url(../icons/about.svg) no-repeat;
-// }
+
 .aside-title {
 	padding: 5px 0;
 	font-family: Verdana;
@@ -59,7 +44,7 @@ aside {
 	margin-bottom: 10px;
 }
 .button-tweet {
-	display: flex;
+	@include row;
 	align-items: center;
 	width: 100%;
 	height: 30px;
