--- a/src/scss/core/_footer.scss
+++ b/src/scss/core/_footer.scss
@@ -1,7 +1,7 @@
 footer {
 	border-top: 2px solid #E5E5E5;
 	max-width: 1088px;
-	display: flex;
+	@include row;
 	margin: 30px auto 0 auto;
 	justify-content: space-between;
 	align-items: center;
