--- a/src/scss/core/main/_banner.scss
+++ b/src/scss/core/main/_banner.scss
@@ -48,11 +48,11 @@
 }
 .tab{
     flex-basis: 25%;
-    background-color: #EFF8F7;;
+    background-color: $tab;
     border-left: 1px solid #F9FBFB;
 }
 .tab>a{
-    color: #34ACA7
+    color: $main-color
 }
 .tab-title{
     font-size: 18px;
@@ -66,6 +66,6 @@
     padding: 0 0 22px 20px;
 }
 .active{
-    background-color: #D9EFEC;
+    background-color: $active;
     border: none;
 }
