--- a/src/scss/core/main/_subscribe.scss
+++ b/src/scss/core/main/_subscribe.scss
@@ -1,6 +1,6 @@
 .subscribe{
-    border-top: 1px dashed #E5E5E5;
-    border-bottom: 1px dashed #E5E5E5;
+    border-top: $border-dashed;
+    border-bottom: $border-dashed;
     @include row;
     align-items: center;
     padding: 10px 18px;
@@ -19,7 +19,7 @@ form{
     margin: 0 24px 0 16px; 
 }
 input{
-    border: 1px solid #E5E5E5;
+    border: $border-solid;
 }
 input:placeholder-shown{
     font-size: 10px;
@@ -28,7 +28,7 @@ input:placeholder-shown{
 }
 .subscribe-button{
     background: linear-gradient(180deg, #F4F3F3 0%, #BBB9B9 100%);
-    border: 1px solid #E5E5E5;
+    border: $border-solid;
     border-radius: 2px;
     font-size: 10px;
     line-height: 10px;
