--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,6 @@
 @import 'reset.scss';
 @import 'mixins.scss';
+@import 'variables.scss';
 @import 'core/base.scss';
 @import 'core/main.scss';
 @import 'core/aside.scss';
