added support ie 11

--- a/src/scss/core/main/_subscribe.scss
+++ b/src/scss/core/main/_subscribe.scss
@@ -5,9 +5,12 @@
     align-items: center;
     padding: 10px 18px;
     margin-bottom: 29px;
+    justify-content: space-between;
+    max-width: 100%;
 }
 .subscribe-description{
     @include row;
+    max-width: 75%;
 }
 form{
     @include row;
